--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,14 @@ services:
       - ./:/home/gcc 
     ports:
       - "8787:8787"
+  shiny:
+    build:
+      context: ./docker/shiny
+      target: prod
+    image: geiser/r-statistic-tutorial-gamiflow_shiny
+    container_name: r-statistic-tutorial-gamiflow_shiny
+    ports:
+      - "3636:3838"
+    volumes:
+      - '.:/srv/shiny-server/r-statistic-tutorial-gamiflow'
+      - './shiny_logs:/var/log/shiny-server'
