convert to package rshinystatistics

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 Makefile
 
 .rstudio/
@@ -13,6 +12,7 @@ shiny_logs
 
 # User-specific files
 .Ruserdata
+
 
 # Example code in package build process
 *-Ex.R
@@ -43,3 +43,10 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+# shiny-app
+
+report/
+
+
+
