update docker file

--- a/docker/shiny/Dockerfile
+++ b/docker/shiny/Dockerfile
@@ -7,6 +7,8 @@ LABEL org.label-schema.license="GPL-3.0" \
       org.label-schema.vendor="R-studio for my-projects" \
       maintainer="Geiser Chalco <geiser@usp.br>"
 
+RUN /rocker_scripts/install_texlive.sh
+
 ENV SHINY_SERVER_VERSION 1.5.14.948
 RUN /rocker_scripts/install_shiny_server.sh
 
