--- a/docker/shiny/Dockerfile
+++ b/docker/shiny/Dockerfile
@@ -1,16 +1,20 @@
-FROM rocker/shiny-verse:4.0.2 AS prod
+FROM rocker/shiny-verse:4.0.5 AS prod
 
-MAINTAINER Geiser Chalco <geiser@usp.br>
+MAINTAINER Geiser Chalco <geiser@alumni.usp.br>
 
 LABEL org.label-schema.license="GPL-3.0" \
       org.label-schema.vcs-url="https://github.com/geiser/docker" \
       org.label-schema.vendor="R-studio for my-projects" \
-      maintainer="Geiser Chalco <geiser@usp.br>"
+      maintainer="Geiser Chalco <geiser@alumni.usp.br>"
+
+RUN apt-get update -qq \
+    && apt-get -y --no-install-recommends install
 
 RUN /rocker_scripts/install_texlive.sh
-
-ENV SHINY_SERVER_VERSION 1.5.14.948
-RUN /rocker_scripts/install_shiny_server.sh
+RUN chown -R shiny:shiny /opt/texlive \
+    && chmod -R 777 /opt/texlive
+RUN chown -R shiny:shiny /usr/local/texlive \
+    && chmod -R 777 /usr/local/texlive
 
 RUN R -e 'remotes::install_github("geiser/rshinystatistics")'
 RUN install2.r -s robcbi \
@@ -20,8 +24,7 @@ RUN install2.r -s robcbi \
 RUN install2.r -s lavaan \
 	&& install2.r -s psych \
 	&& install2.r -s sem \
-	&& install2.r -s semPlot \
-	&& install2.r -s TAM
+	&& install2.r -s semPlot
 RUN install2.r -s moments \
     && install2.r -s rcompanion \
     && install2.r -s emmeans \
@@ -30,4 +33,4 @@ RUN install2.r -s shinyBS
 RUN install2.r -s plotly
 RUN install2.r -s nortest
 
-
+RUN rm -rf /var/lib/apt/lists/*
