--- a/docker/shiny/Dockerfile
+++ b/docker/shiny/Dockerfile
@@ -10,11 +10,11 @@ LABEL org.label-schema.license="GPL-3.0" \
 RUN apt-get update -qq \
     && apt-get -y --no-install-recommends install
 
-RUN /rocker_scripts/install_texlive.sh
-RUN chown -R shiny:shiny /opt/texlive \
-    && chmod -R 777 /opt/texlive
-RUN chown -R shiny:shiny /usr/local/texlive \
-    && chmod -R 777 /usr/local/texlive
+#RUN /rocker_scripts/install_texlive.sh
+#RUN chown -R shiny:shiny /opt/texlive \
+#    && chmod -R 777 /opt/texlive
+#RUN chown -R shiny:shiny /usr/local/texlive \
+#    && chmod -R 777 /usr/local/texlive
 
 RUN install2.r -s robcbi \
     && install2.r -s remotes \
@@ -32,6 +32,7 @@ RUN install2.r -s shinyBS
 RUN install2.r -s plotly
 RUN install2.r -s nortest
 
-RUN R -e 'if (packageVersion("rshinystatistics") < "0.0.0.9100") { remove.packages("rshinystatistics"); remotes::install_github("geiser/rshinystatistics") }'
+RUN R -e 'remotes::install_github("geiser/rshinystatistics")'
 
 RUN rm -rf /var/lib/apt/lists/*
+
